--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -21,7 +21,8 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: stable
-
+            
+      - run: flutter clean
       - run: flutter pub get
       - run: flutter build windows --release
 
